exception handling implemented